kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webapp-dpl
  name: webapp-dpl
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp-dpl
  type: NodePort 
status:
  loadBalancer: {}
