kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
#  - host: "108.59.81.9.nip.io" 
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-dpl 
            port:
              number: 80
